--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 html {
   font-size: 62.5%;
 }
@@ -5,7 +9,8 @@ html {
 body {
   font-family: Helvetica, Arial, sans-serif;
   font-size: $m-size;
-  background: white;
+  color: $dark-grey;
+  line-height: 1.6;
 }
 
 button {
@@ -15,7 +20,6 @@ button {
 button:disabled {
   cursor: default;
 }
-
 
 .is-active {
   font-weight: bold;
